    * support for live and non-live DVB teletext with demuxer lavf
    * -name, -title and -use-filename-title options for MPlayer
    * support for stream handling via FFmpeg
      Configure with --enable-protocol="file_protocol pipe_protocol
      http_protocol rtmp_protocol tcp_protocol udp_protocol"
      and use e.g. ffmpeg://http://example.com/test

    MEncoder:
    * add -tsprog for demuxer lavf

  rc3: "BikeshedCounter" March 27, 2009
    Decoders:
    * support for X8 frames (fixes "J-type picture is not supported" for WMV2)
    * support for DTS WAV/DTS-CD passthrough by ad_hwac3
    * Apple's raw YUV2 in MOV
    * LATM over LOAS AAC decoding via internal libfaad2
    * video game codecs: BFI video, Playstation MDEC video, ADPCM XA audio,
      EA Maxis XA ADPCM audio, RL2 video, Beam Software SIFF video, V.Flash PTX video
    * AVOption support for libavcodec-based decoders
    * use lavc ADPCM codecs by default
    * support for progressive JPEG in ffmjpeg
    * ACDSystems MJPEG (ACDV) via binary DLL and lavc
    * SIF1 via binary DLL
    * wincam screen capture (WCMV) via binary DLL
    * Creative Labs Video Blaster Webcam MJPEG (CJPG) via binary DLL and ijpg library
    * kensington webcam (AJPG, ABYR) via binary DLL
    * centre for wavelets (wavc) via binary DLL
    * GeoVision Advanced MPEG-4 (GMP4, GM40) via binary DLL
    * Xiricam JPEG from Veo PC Camera (XJPG) via binary DLL
    * WorldConnect Wavelet Video (SMSV) via binary DLL
    * VDOWave 3 advanced (VDO3,VDOM,VDOW) via binary DLL
    * VoxWare MetaVoice (format 0x0074) via binary DLL
    * Ulead DV Audio (0x215,0x216) via binary DLL
    * GoToMeeting codec (G2M2,G2M3) via binary DLL
    * SP4x codec - used by Aiptek MegaCam (SP4x) via binary DLL
    * Broadway MPEG Capture Codec (BW10) via binary DLL
    * ZDSoft screen recorder (ZDSV) via binary DLL
    * WebTrain Communication lossless screen recorder (WTVC) via binary DLL
    * xfire video (XFR1) via binary DLL